objects/APTS_DM_Batch_Job__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Criteria__c</fullName>
        <label>Criteria</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Job_Name__c</fullName>
        <label>Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Job_Type__c</fullName>
        <label>Job Type</label>
        <picklist>
            <picklistValues>
                <fullName>Batch</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Demand</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Processing_Batch_Number__c</fullName>
        <label>Processing Batch Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Data Migration Job</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DMJ-{0000000}</displayFormat>
        <label>Data Migration Job ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Migration Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>